Fix navigation bar to top of viewport and adjust for spacing

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@ header {
     display: flex;
     align-items: end;
     justify-content: space-between;
+    position: fixed;
+    width: 100%;
+}
+
+main {
+    padding-top: 75px;
 }
 
 img {
